--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,4 +1,4 @@
-.workout-container {
+/* .workout-container {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -48,4 +48,4 @@
 
 .accessory-item {
   margin: 0.2rem 0;
-}
+} */
