--- a/frontend/src/components/WorkoutPlanStyle.css
+++ b/frontend/src/components/WorkoutPlanStyle.css
@@ -1,9 +1,34 @@
 .workout-container {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: baseline;
+    background: #fbfbfb;
+    border-radius: 8px;
+    box-shadow: 1px 2px 8px rgba(0, 0, 0, 0.65);
+    height: 80%;
+    margin: 6rem auto 8.1rem auto;
+    width: 80%;
+  }
+
+  .header {
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+  }
+
+  .lift-inputs {
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-end;
+    align-content: stretch;
+    flex-direction: column;
   }
   
+  .max-value {
+    display: flex;
+    align-items: left;
+  }
+
   .mmx-container {
     display: flex;
     align-content: right;
