--- a/frontend/src/components/LandingPageStyle.css
+++ b/frontend/src/components/LandingPageStyle.css
@@ -1,7 +1,13 @@
-body {
-    background-image: url("../assets/landingPageBackground.jpg");
-    background-size: cover;
+/* body, html {
+    background-image: url("../assets/landingPageBackground.jpg"); */
+    /* height: 100%; */
+    /* background-position: center;
     background-repeat: no-repeat;
+    background-size: cover;
+} */
+
+.page-container {
+    height: 100vh;
 }
 
 label {
