--- a/frontend/src/components/WorkoutPlanStyle.css
+++ b/frontend/src/components/WorkoutPlanStyle.css
@@ -1,11 +1,13 @@
 .workout-container {
+  border: 3px solid rgba(202, 49, 49, 0.788);
     display: flex;
     flex-direction: column;
     align-items: baseline;
     background: #fbfbfb;
     border-radius: 8px;
     box-shadow: 1px 2px 8px rgba(0, 0, 0, 0.65);
-    height: 80%;
+    /* height: 80%; */
+    /* max-height: 300px; */
     margin: 6rem auto 8.1rem auto;
     width: 80%;
   }
@@ -23,7 +25,7 @@
     align-content: stretch;
     flex-direction: column;
   }
-  
+
   .max-value {
     display: flex;
     align-items: left;
