--- a/frontend/src/components/DashboardStyle.css
+++ b/frontend/src/components/DashboardStyle.css
@@ -1,3 +1,63 @@
-.dashboard-container {
-    height: 100vh;
+.page-container {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  background: #fbfbfb;
+  border-radius: 8px;
+  box-shadow: 1px 2px 8px rgba(0, 0, 0, 0.65);
+  margin: 6rem auto 8.1rem auto;
+  width: 80%;
+  justify-content: space-evenly;
+  flex-direction: column;
+}
+
+#dashboard-title {
+  font-family: "Raleway Thin", sans-serif;
+  letter-spacing: 4px;
+  padding-bottom: 23px;
+  padding-top: 13px;
+  text-align: center;
+}
+
+.underline-title {
+  background: -webkit-linear-gradient(right, #a6f77b, #2ec06f);
+  height: 2px;
+  margin: -1.1rem auto 0 auto;
+  width: 230px;
+}
+
+.btn {
+  background: -webkit-linear-gradient(right, #a6f77b, #2dbd6e);
+  border: none;
+  border-radius: 21px;
+  box-shadow: 0px 1px 8px #24c64f;
+  font-size: 20px;
+  color: white;
+  padding: 5vw;
+  font-family: "Raleway SemiBold", sans-serif;
+  height: 80;
+  margin: 0 auto;
+  margin-top: 5vh;
+  transition: 0.25s;
+  width: 10vw;
+}
+.btn-container {
+  font-family: "Raleway SemiBold", sans-serif;
+  color: white;
+}
+.btn:hover {
+  box-shadow: 0px 1px 18px #24c64f;
+}
+.page-content {
+  align-items: left;
+  display: flex;
+  flex-direction: column;
+  background: #fbfbfb;
+  border: none;
+  outline: none;
+  padding-top: 14px;
+}
+a {
+  text-decoration: none;
+  color: white;
 }
