--- a/frontend/src/components/WorkoutPlanStyle.css
+++ b/frontend/src/components/WorkoutPlanStyle.css
@@ -1,79 +1,135 @@
 .workout-container {
   border: 3px solid rgba(202, 49, 49, 0.788);
-    display: flex;
-    flex-direction: column;
-    align-items: baseline;
-    background: #fbfbfb;
-    border-radius: 8px;
-    box-shadow: 1px 2px 8px rgba(0, 0, 0, 0.65);
-    /* height: 80%; */
-    /* max-height: 300px; */
-    margin: 6rem auto 8.1rem auto;
-    width: 80%;
-  }
+  display: flex;
+  flex-direction: column;
+  align-items: baseline;
+  background: #fbfbfb;
+  border-radius: 8px;
+  box-shadow: 1px 2px 8px rgba(0, 0, 0, 0.65);
+  /* height: 80%; */
+  /* max-height: 300px; */
+  margin: 6rem auto 8.1rem auto;
+  width: 80%;
+}
 
-  .header {
-    display: flex;
-    flex-direction: column;
-    align-items: left;
-  }
+.header {
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+}
 
-  .lift-inputs {
-    display: flex;
-    justify-content: space-around;
-    align-items: flex-end;
-    align-content: stretch;
-    flex-direction: column;
-  }
+.lift-inputs {
+  display: flex;
+  justify-content: space-around;
+  flex-direction: column;
+}
 
-  .max-value {
-    display: flex;
-    align-items: left;
-  }
+.max-value {
+  display: flex;
+  align-items: left;
+}
 
-  .mmx-container {
-    display: flex;
-    align-content: right;
-  }
-  
-  .weeks-container {
-    display: flex;
-    flex-direction: row;
-    margin: 1rem;
-    column-gap: 3rem;
-    
-  }
-  
-  .day-column {
-    display: flex;
-    flex-direction: column;
-    margin: 0.5rem;
-    padding: 1rem;
-    border: 1px solid #ccc;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  }
-  
-  .day-header {
-    font-size: 1.5rem;
-    font-weight: bold;
-  }
-  
-  .sets-list {
-    list-style: none;
-    padding: 0;
-  }
-  
-  .sets-item {
-    margin: 0.2rem 0;
-  }
-  
-  .accessory-list {
-    list-style: disc;
-    padding-left: 1rem;
-    margin: 0;
-  }
-  
-  .accessory-item {
-    margin: 0.2rem 0;
-  }
-  
+.mmx-container {
+  display: flex;
+  align-content: right;
+}
+
+.weeks-container {
+  display: flex;
+  flex-direction: row;
+  margin: 1rem;
+  column-gap: 3rem;
+}
+
+.day-container {
+  display: flex;
+  flex-direction: column;
+  font-family: "Raleway", sans-serif;
+  margin: 0.5rem;
+  padding: 0.3rem;
+  border: 1px solid #ff8d8d;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.day-header {
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+.sets-list {
+  list-style: none;
+  padding: 0;
+}
+
+.sets-item {
+  margin: 0.2rem 0;
+}
+
+.accessory-list {
+  list-style: disc;
+  padding-left: 1rem;
+  margin: 0;
+}
+
+.accessory-item {
+  margin: 0.2rem 0;
+}
+
+.plan-btn {
+  background: -webkit-linear-gradient(right, #a6f77b, #2dbd6e);
+  border: none;
+  border-radius: 21px;
+  box-shadow: 0px 1px 8px #24c64f;
+  color: white;
+  font-size: 20px;
+  font-family: "Raleway SemiBold", sans-serif;
+  height: 50px;
+  margin: 10px;
+  margin-top: 50px;
+  transition: 0.25s;
+  width: 200px;
+}
+.plan-btn-container {
+  font-family: "Raleway SemiBold", sans-serif;
+  color: white;
+}
+.plan-btn:hover {
+  box-shadow: 0px 1px 18px #24c64f;
+  cursor: pointer;
+}
+
+/* Removes the clear button from date inputs */
+input[type="date"]::-webkit-clear-button {
+  display: none;
+}
+
+/* Removes the spin button */
+input[type="date"]::-webkit-inner-spin-button { 
+  display: none;
+}
+
+/* Always display the drop down caret */
+input[type="date"]::-webkit-calendar-picker-indicator {
+  color: #2c3e50;
+}
+
+/* A few custom styles for date inputs */
+input[type="date"] {
+  appearance: none;
+  -webkit-appearance: none;
+  color: #95a5a6;
+  font-family: "Helvetica", arial, sans-serif;
+  font-size: 18px;
+  border:1px solid #ecf0f1;
+  background:#ecf0f1;
+  padding:5px;
+  display: inline-block !important;
+  visibility: visible !important;
+}
+
+input[type="date"], focus {
+  color: #95a5a6;
+  box-shadow: none;
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+}
