--- a/frontend/src/components/LoginPageStyle.css
+++ b/frontend/src/components/LoginPageStyle.css
@@ -16,11 +16,11 @@ label {
 }
 
 #sign-up {
-    color: #2dbd6e;
-    font-family: "Raleway", sans-serif;
-    margin-top: 3px;
-    text-align: right;
-  }
+  color: #2dbd6e;
+  font-family: "Raleway", sans-serif;
+  margin-top: 3px;
+  text-align: right;
+}
 
 #card {
   background: #fbfbfb;
@@ -52,12 +52,12 @@ label {
 }
 
 #signup {
-    color: #2dbd6e;
-    font-family: "Raleway", sans-serif;
-    font-size: 10pt;
-    margin-top: 16px;
-    text-align: center;
-  }
+  color: #2dbd6e;
+  font-family: "Raleway", sans-serif;
+  font-size: 10pt;
+  margin-top: 16px;
+  text-align: center;
+}
 
 #submit-btn {
   background: -webkit-linear-gradient(right, #a6f77b, #2dbd6e);
@@ -66,6 +66,7 @@ label {
   box-shadow: 0px 1px 8px #24c64f;
   color: white;
   font-family: "Raleway SemiBold", sans-serif;
+  cursor: pointer;
   height: 42.3px;
   margin: 0 auto;
   margin-top: 50px;
