--- a/frontend/src/components/SignupPageStyle.css
+++ b/frontend/src/components/SignupPageStyle.css
@@ -66,6 +66,7 @@ label {
   box-shadow: 0px 1px 8px #24c64f;
   color: white;
   font-family: "Raleway SemiBold", sans-serif;
+  cursor: pointer;
   height: 42.3px;
   margin: 0 auto;
   margin-top: 50px;
